--- a/app/src/main/res/anim/slide_out_left.xml
+++ b/app/src/main/res/anim/slide_out_left.xml
@@ -2,7 +2,7 @@
 
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:duration="@android:integer/config_mediumAnimTime"
+        android:duration="@integer/material_motion_duration_long_2"
         android:fromXDelta="0"
         android:toXDelta="-100%p" />
 </set>
