--- a/app/src/main/res/layout/dialog_exit_app.xml
+++ b/app/src/main/res/layout/dialog_exit_app.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
-    app:cardBackgroundColor="@color/black"
     app:cardCornerRadius="20dp"
     >
 
@@ -14,14 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
+        android:background="@drawable/background_gradient_zeus_miracle"
         >
 
         <Button
             android:id="@+id/btnCancel"
+            style="@style/Widget.Material3.Button.TonalButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:text="Cancel"
+            android:textColor="@color/selected"
+            android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/btnOK"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,10 +31,13 @@
 
         <Button
             android:id="@+id/btnOK"
+            style="@style/Widget.Material3.Button.TonalButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:text="OK"
+            android:textColor="@color/selected"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btnCancel"
@@ -42,9 +47,12 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wanna quit?"
-            android:textColor="@color/white"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/lemon_reguler"
+            android:text="Sampai jumpa"
+            android:textColor="@color/button"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.44"
             app:layout_constraintStart_toStartOf="parent"
