--- a/app/src/main/res/layout/tebak_kata_list_item.xml
+++ b/app/src/main/res/layout/tebak_kata_list_item.xml
@@ -24,10 +24,9 @@
             style="@style/Widget.Material3.Button.IconButton.Outlined"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             app:icon="@drawable/pen_to_square_solid"
-            app:layout_constraintBottom_toBottomOf="@+id/imgItemTbk"
-            app:layout_constraintStart_toEndOf="@+id/imgItemTbk" />
+            app:layout_constraintStart_toStartOf="@+id/tvAnswerTbk"
+            app:layout_constraintTop_toBottomOf="@+id/tvAnswerTbk" />
 
         <Button
             android:id="@+id/btnItemDeleteTbk"
@@ -59,22 +58,23 @@
 
         <ImageView
             android:id="@+id/imgItemTbk"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/terka_box" />
 
         <TextView
             android:id="@+id/tvAnswerTbk"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
             android:layout_marginStart="8dp"
+            android:background="@drawable/box_shape_siapa"
+            android:fontFamily="monospace"
             android:gravity="center_vertical"
             android:paddingHorizontal="5dp"
-            android:text="Soekarno"
-            android:background="@drawable/box_shape_siapa"
-            app:layout_constraintBottom_toTopOf="@+id/btnItemEditTbk"
+            android:text="AAAAAAAAAAAAAAABBBBBBBBBBBBBBBCCCCCCCCCCCCCCC"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgItemTbk"
             app:layout_constraintTop_toTopOf="@+id/imgItemTbk" />
